# BGLittleFSLib

./: .gitmodules  CMakeLists.txt  README.md
src/: CMakeLists.txt
src/Filesystem/: AGSFSDirectory.cpp  AGSFSDirectory.h  AGSFSFilename.cpp  AGSFSFilename.h  AGSFSGetPathVisitor.cpp  AGSFSGetPathVisitor.h  AGSFSNode.cpp  AGSFSNode.h  AGSFSNodeVisitor.cpp  AGSFSNodeVisitor.h  AGSFSTreeVisitor.cpp  AGSFSTreeVisitor.h  AGS_LittleFS.cpp  AGS_LittleFS.h
